[gd_scene load_steps=11 format=2]

[ext_resource path="res://YetBumbler.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUITheme.tres" type="Theme" id=3]
[ext_resource path="res://PauseMenu.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="DynamicFont" id=21]
outline_size = 1
outline_color = Color( 0.0784314, 0.254902, 0.431373, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=22]
default_font = SubResource( 21 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_focus = Color( 0.929412, 1, 0.0901961, 1 )
Button/colors/font_color_hover = Color( 0.929412, 1, 0.0901961, 1 )
Button/colors/font_color_pressed = Color( 0.854902, 0.623529, 0.0784314, 1 )
Button/styles/disabled = SubResource( 8 )
Button/styles/focus = SubResource( 16 )
Button/styles/hover = SubResource( 17 )
Button/styles/normal = SubResource( 11 )
Button/styles/pressed = SubResource( 18 )
VBoxContainer/constants/separation = 4

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Tint" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -58.5
margin_right = 81.0
margin_bottom = 58.5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 12.0
margin_top = 9.0
margin_right = 150.0
margin_bottom = 108.0
theme = SubResource( 22 )
custom_constants/separation = 4

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 138.0
margin_bottom = 18.0
theme = ExtResource( 3 )
text = "Paused!"
align = 1

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 138.0
margin_bottom = 45.0
text = "Continue Game"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 138.0
margin_bottom = 72.0
text = "Options"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 138.0
margin_bottom = 99.0
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
